<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>fantasy-base</module>
        <module>fantasy-gateway</module>
        <module>fantasy-oauth2</module>
        <module>fantasy-oss</module>
        <module>fantasy-card</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.mzlalal</groupId>
    <artifactId>fantasy</artifactId>
    <version>1.0</version>

    <properties>
        <java.version>1.8</java.version>
        <hutool.version>5.7.13</hutool.version>
        <knife4j.version>2.0.8</knife4j.version>
        <knife4j.aggregation.version>2.0.8</knife4j.aggregation.version>
        <fastjson.version>1.2.76</fastjson.version>
        <redisson.version>3.15.3</redisson.version>
        <mybatis.plus.version>3.5.0</mybatis.plus.version>
        <spring.cloud.version>2020.0.3</spring.cloud.version>
        <spring.cloud.alibaba.version>2021.1</spring.cloud.alibaba.version>
        <spring.cloud.nacos.version>2021.1</spring.cloud.nacos.version>
        <!-- Mz -->
        <mz.fantasy.base.version>${version}</mz.fantasy.base.version>
        <mz.minio.stater.version>1.1.1</mz.minio.stater.version>
        <mz.system.log.stater.version>1.0.1</mz.system.log.stater.version>
        <mz.mybatis.interceptor.stater.version>1.0.4</mz.mybatis.interceptor.stater.version>
        <mz.repeat.submit.starter.version>1.0.4</mz.repeat.submit.starter.version>
        <mz.notify.service.stater.version>1.0.1</mz.notify.service.stater.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.mzlalal</groupId>
                <artifactId>fantasy-base</artifactId>
                <version>${mz.fantasy.base.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mzlalal</groupId>
                <artifactId>mz-system-log-stater</artifactId>
                <version>${mz.system.log.stater.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mzlalal</groupId>
                <artifactId>mz-notify-service-stater</artifactId>
                <version>${mz.notify.service.stater.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mzlalal</groupId>
                <artifactId>mz-mybatis-interceptor-stater</artifactId>
                <version>${mz.mybatis.interceptor.stater.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mzlalal</groupId>
                <artifactId>mz-minio-stater</artifactId>
                <version>${mz.minio.stater.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mzlalal</groupId>
                <artifactId>mz-repeat-submit-stater</artifactId>
                <version>${mz.repeat.submit.starter.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-aggregation-spring-boot-starter</artifactId>
                <version>${knife4j.aggregation.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-micro-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis.plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- docker打包工具Jib -->
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>2.4.0</version>
                    <configuration>
                        <!-- 相当于 Dockerfile 中的 FROM -->
                        <from>
                            <image>airdock/oraclejdk:1.8</image>
                        </from>
                        <to>
                            <!-- 构建镜像名称，阿里云镜像仓库地址 -->
                            <!--suppress UnresolvedMavenProperty -->
                            <image>registry.cn-hangzhou.aliyuncs.com/mzlalal/${jib.name}</image>
                            <!-- 阿里云镜像仓库账号密码 -->
                            <auth>
                                <username>影子之城啊</username>
                                <password>Mzlalal88</password>
                            </auth>
                            <!-- Docker 镜像的 tag 这里使用maven定义的版本号 -->
                            <tags>
                                <tag>
                                    ${project.version}
                                </tag>
                            </tags>
                        </to>
                        <container>
                            <!-- 启动类 -->
                            <!--suppress UnresolvedMavenProperty -->
                            <mainClass>${jib.main.class}</mainClass>
                            <!-- jvm参数 -->
                            <jvmFlags>
                                <jvmFlag>-Xms96M</jvmFlag>
                                <jvmFlag>-Xmx96M</jvmFlag>
                                <jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
                                <!--suppress UnresolvedMavenProperty -->
                                <jvmFlag>-XX:HeapDumpPath=/root/logs/dump/${jib.name}-dump-%t.log</jvmFlag>
                                <jvmFlag>-verbose:gc</jvmFlag>
                                <jvmFlag>-XX:+PrintGCDetails</jvmFlag>
                                <jvmFlag>-XX:+PrintGCDateStamps</jvmFlag>
                                <!--suppress UnresolvedMavenProperty -->
                                <jvmFlag>-Xloggc:/root/logs/gc/${jib.name}-gc-%t.log</jvmFlag>
                                <jvmFlag>-Duser.timezone=GMT+08</jvmFlag>
                            </jvmFlags>
                            <args>
                                <arg>
                                    --spring.profiles.active=product
                                </arg>
                            </args>
                            <!-- 使用当前时间 -->
                            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                            <!-- 容器在运行时暴露的端口 -->
                            <ports>
                                <!--suppress UnresolvedMavenProperty -->
                                <port>${jib.port}</port>
                            </ports>
                        </container>
                        <!-- 如果私有镜像仓库没有启用https，设置allowInsecureRegistries参数为true -->
                        <allowInsecureRegistries>true</allowInsecureRegistries>
                    </configuration>
                    <!-- 绑定jib:build到 Maven生命周期，例如package/install/deploy -->
                    <executions>
                        <execution>
                            <phase>install</phase>
                            <goals>
                                <goal>build</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>